[gd_scene load_steps=2 format=3 uid="uid://servercreate123"]

[ext_resource type="Script" path="res://scripts/menu/server_create_ui.gd" id="1"]

[node name="ServerCreate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.7, 1)
theme_override_font_sizes/font_size = 32
text = "서버 생성"
horizontal_alignment = 1

[node name="ServerNameContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/ServerNameContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "서버 이름:"

[node name="ServerNameEdit" type="LineEdit" parent="Panel/VBoxContainer/ServerNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "서버 이름 입력"
max_length = 30

[node name="PortContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/PortContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "포트:"

[node name="PortEdit" type="LineEdit" parent="Panel/VBoxContainer/PortContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "7777"
max_length = 5

[node name="MaxPlayersContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MaxPlayersContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "최대 인원:"

[node name="MaxPlayersSpin" type="SpinBox" parent="Panel/VBoxContainer/MaxPlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 4.0
value = 4.0

[node name="UPNPCheck" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "UPNP 사용 (자동 포트 포워딩)"

[node name="InfoLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "※ 인터넷 플레이 시 포트 포워딩이 필요할 수 있습니다"
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CreateBtn" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "생성"

[node name="CancelBtn" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "취소"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "대기 중..."
horizontal_alignment = 1

